<resources>
    <string name="app_name">Food Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="AppTtitle">You Are The\nCheif</string>
    <string name="login_sligon">"Start Cooking journey "</string>
    <string name="asking_to_login">Already have an account?</string>
    <string name="login">Log In</string>
    <string name="above_btn_siginUp">Sign Up</string>
    <string name="Password">Password (At least 6 characters)</string>
    <string name="Email">Email ex:Abc@gmail.com </string>
    <string name="btn_loginWhichStartCooking">Start Cooking</string>
    <string name="tv_signUP">Sign Up</string>
    <string name="hint_email">Email</string>
    <string name="Professionalchef">Professional \nChef</string>
    <string name="HomeTab">Home</string>
    <string name="SearchTab">Search</string>
    <string name="planTab">Plan</string>
    <string name="FavoriteTab">Favorite</string>
    <string name="DailyInsperationTitile">Daily Insperation</string>
    <string name="plan_page_title">My plan</string>
    <string name="weekSaturday">"Saturday "</string>
    <string name="Saturday">Saturday</string>
    <string name="Sunday">Sunday</string>
    <string name="Monday">Monday</string>
    <string name="Tuesday">Tuesday</string>
    <string name="Wednesday">Wednesday</string>
    <string name="Thursday">Thursday</string>
    <string name="Friday">Friday</string>
    <string name="SearchByIng">Search by Ingredients</string>
    <string name="SearchbyMeals"> Search by Meal Name </string>
    <string name="SearchbyCountery">Search by Countery</string>
    <string name="title_chooseDay">Add to Day Menu </string>
    <string name="RefreshPage">Refresh page, \nTo get another insper meal</string>
    <string name="searchbymeal">Search by meal name </string>
    <string name="searchByText">You also can see and search by:</string>
    <string name="contAsGuest">Guest</string>
    <string name="searchByCategory">search by Category</string>
    <string name="All_Category_Meals">All Category Meals</string>
    <string name="searchAboutMealsAcoordingCountry">Country Name</string>
    <string name="ingredients">Ingredients</string>
    <string name="Category">Category</string>
    <string name="Country">Country</string>
    <string name="Search">Search</string>
    <string name="All_Area_Meals">All Area Meals</string>
    <string name="AllMealsByIngredent">All meals by ingredient</string>
    <string name="searchByIngredient">Ingredient ex chicken breast</string>
    <string name="category">Category</string>
    <string name="areas">Areas</string>
    <string name="search_by">Search by:</string>
    <string name="see_list_and_search_by">See List and Search by:</string>
    <string name="skip">Skip</string>
    <string name="user_email">user email</string>
    <string name="mayar_saleh">Mayar saleh</string>
    <string name="food_planner">Food Planner</string>
    <string name="discover_new_meals">Discover New Meals</string>
    <string name="click_here_to_search_by_ingredient">click here,To Search by ingredient</string>
    <string name="click_here">Click here</string>
    <string name="ingredient">Ingredient</string>
</resources>