<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chooseTheDayLayOut"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_plan_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/berkshire_swash"
        android:gravity="center"
        android:text="@string/plan_page_title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_plan_title"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewSaturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/Saturday"
                android:textStyle="bold" />

            <View
                android:layout_width="358dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSaturday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewSunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/Sunday"
                android:textStyle="bold" />

            <View
                android:layout_width="358dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewSunday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewMonday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/Monday"
                android:textStyle="bold" />

            <View
                android:layout_width="358dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="?android:attr/listDivider" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewMonday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewTuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/Tuesday"
                android:textStyle="bold" />
            <View
                android:layout_width="358dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="?android:attr/listDivider" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewTuesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewWednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/Wednesday"
                android:textStyle="bold" />

            <View
                android:layout_width="358dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="?android:attr/listDivider" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewWednesday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewThursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/Thursday"
                android:textStyle="bold" />

            <View
                android:layout_width="358dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="?android:attr/listDivider" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewThursday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewFriday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/Friday"
                android:textStyle="bold" />

            <View
                android:layout_width="358dp"
                android:layout_height="1dp"
                android:layout_marginTop="12dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewFriday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
