<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.logIn.view.view.fragLogin">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="208dp"
        android:fontFamily="@font/lobsterregular"
        android:text="@string/login"
        android:textColor="@color/title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_user_email"
        android:layout_width="269dp"
        android:layout_height="45dp"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <EditText
        android:id="@+id/ed_user_pass"
        android:layout_width="262dp"
        android:layout_height="44dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.206"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_user_email" />
<!--    <ProgressBar-->
<!--        android:id="@+id/progress_bar"-->
<!--        android:layout_width="49dp"-->
<!--        android:layout_height="30dp"-->
<!--        android:visibility="gone" />-->

    <Button
        android:id="@+id/btn_startCooking_atSignUp"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginTop="80dp"
        android:backgroundTint="@color/title"
        android:text="@string/btn_loginWhichStartCooking"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_user_pass" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="41dp"
        android:layout_height="36dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_startCooking_atSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_user_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>