<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/btn_google"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="145dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:gravity="start|center_vertical"
        android:text="Sign by"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/google_icon"
        android:layout_width="34dp"
        android:layout_height="53dp"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:src="@drawable/google_icon"
        app:layout_constraintBottom_toBottomOf="@+id/btn_google"
        app:layout_constraintEnd_toEndOf="@+id/btn_google"
        app:layout_constraintTop_toTopOf="@+id/btn_google"
        />

    <Button
        android:id="@+id/btn_signUp"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="145dp"
        android:layout_height="68dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:paddingStart="16dp"
        android:text="@string/above_btn_siginUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btn_google"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/berkshire_swash"
        android:text="@string/login_sligon"
        android:textColor="@color/title"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/asking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="40dp"
        android:text="@string/asking_to_login"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="104dp"
        android:layout_marginBottom="24dp"
        android:text="@string/login"
        android:layout_marginStart="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="@+id/asking"
        app:layout_constraintStart_toEndOf="@+id/asking" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="412dp"
        android:layout_height="520dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/photo" />


    <TextView
        android:id="@+id/tv_cont_as_guest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/skip"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>